changed buttons, more consistent nav throughout

--- a/contact.html
+++ b/contact.html
@@ -24,30 +24,30 @@
 
     gtag('config', 'UA-122993902-1');
  </script>
+   <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+   <div class="navigation">
+     <!-- Force all links to use HTTPS incase navigation to here was insecure -->
+   <a href="index.html" alt="secure_yo_self"><button class="menu"><i class="fa-solid fa-house-chimney"></i></button></a>
+   <a href="support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+   <a href="downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+   <a href="shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+   <a href="media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
+   <button class="pagehere"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button>
+ </div>
 </head>
 
 <body>
-  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-  <p>
-    <center>
-  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
-  <!--li><a href="https://www.flickr.com/photos/jeremysmai/"><button class="menu"><i class="fab fa-flickr"></i></button></a></li-->
-  <!--li><a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i></button></a></li-->
-  <!--li><a href="https://www.facebook.com/phant0m1nc/"><button class="menu"><i class="fab fa-facebook"></i></button></a></li-->
-  <!--li><a href="https://www.youtube.com/jeremysmai"><button class="menu"><i class="fab fa-youtube"></i></button></a></li-->
-  <!--li><a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a></li-->
-  </center>
-  </p>
-
+  <div class="main">
     <h1>Contact</h1>
-    <center><h4><i>Use the links below to contact me!</i></h4></center>
-<center>
+    <h4><i>Use the links below to contact me!</i></h4>
+    <p>
       <a href="sms:1-414-465-8826"><button class="menu"><i class="fas fa-comments" alt="SMS"></i> Text Me </button></a>
       <a href="tel:1-414-465-8826"><button class="menu"><i class="fas fa-phone" alt="Call"></i> Call Me </button></a>
       <a href="mailto:contact@phantominc.net?subject=PhantomInc Support"><button class="menu"><i class="fas fa-envelope" alt="Email"></i> Email Me </button></a>
       <br>
       <a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter </button></a>
-</center>
+      </p>
+</div>
   <br>
 <center>Have discord? Get in contact NOW!</center>
   <br>
