--- a/index.html
+++ b/index.html
@@ -29,25 +29,23 @@
 <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
       <div class="navigation">
         <!-- Force all links to use HTTPS incase navigation to here was insecure -->
-      <a href="https://www.phantominc.net/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
-      <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
-      <a href="https://www.phantominc.net/shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
-      <!--a href="https://www.phantominc.net/fearandloathing"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a-->
-      <a href="https://www.phantominc.net/media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
-      <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
+      <a href="support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+      <a href="downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+      <a href="shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+      <a href="media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
+      <a href="contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
     </div>
   </head>
 
   <body>
+    <div class="main">
   <p>
-    <br>
-<center><h2>Hello and Welcome to Phantom Inc's Official Website!</h2>
+    <h2>Hello and Welcome to Phantom Inc's Official Website!</h2>
 <h3>The one stop shop for<br> Device Repairs | Website Creation | 3D prints | and more...</h3>
-<br>
-<!--Here is the latest venture back into mostly HTML<br>Hope you enjoy!--></center>
+<!--Here is the latest venture back into mostly HTML<br>Hope you enjoy!-->
   </p>
 <br>
-  <p><center><h2> - - - </h2></center></p>
+  <p><h2> - - - </h2></p>
 <br>
 <h2>About</h2>
 <p>
@@ -57,7 +55,7 @@
   Stayed Tuned for more.
   </p>
   <br>
-    <p><center><h2> - - - </h2></center></p>
+    <p><h2> - - - </h2></p>
   <br>
     <!-- Start of Post Section -->
     <h2>Latest Update</h2>
@@ -76,6 +74,7 @@
   <center><a href="updates.html"><button class="menu"><i class="fas fa-scroll" alt="Old Site"></i> All Updates </button></a></center>
   <br>
   <br>
+  </div>
 </body>
 
  <footer>&copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
