--- a/network.html
+++ b/network.html
@@ -9,11 +9,13 @@
   <title>Phantom Inc |'' | - [Network]</title>
   <link rel="stylesheet" href="css/main.css" />
   <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+  <!-- Fontawesome API code goes here :D -->
+  <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
-      <link rel=icon href=images/phantomicon.png sizes="16x16" type="image/png">
+      <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
     <!-- Mobile Site Fix BB -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+      <meta name="description" content="Phantom Inc Official Website for IT Support, Photorgraphy and More!">
     <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122993902-1"></script>
  <script>
@@ -24,16 +26,24 @@
     gtag('config', 'UA-122993902-1');
  </script>
  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-<div class="navigation">
- <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
+ <div class="navigation">
+  <!-- Force all links to use HTTPS incase navigation to here was insecure -->
+<a href="index.html" alt="secure_yo_self"><button class="menu"><i class="fa-solid fa-house-chimney"></i></button></a>
+<a href="support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+<a href="downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+<a href="shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+<a href="media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
+<a href="contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
 </div>
 </head>
 
   <body>
+    <div class="main">
     <p>
 In a future release this will be replaced with Network stats such as IP, ping test packet ratios, stayalive options, port sniffing tests and more! stay tuned. <br> also you shouldn't be here yet, shame on you :P
 <br> For now you could checkout the <a href="https://www.phantominc.net/startpage">startpage...<a/>
     </p>
+    </div>
 </body>
 
  <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.1 </footer>
