--- a/shop.html
+++ b/shop.html
@@ -27,24 +27,26 @@
  </script>
 <!-- Start Visual-->
   <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-      <div class="navigation">
-        <!-- Force all links to use HTTPS incase navigation to here was insecure -->
-      <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/></button></a>
-      <a href="https://www.phantominc.net/support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
-      <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
-      <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
-      <a href="https://www.phantominc.net/media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
-    </div>
+  <div class="navigation">
+    <!-- Force all links to use HTTPS incase navigation to here was insecure -->
+    <a href="index.html" alt="secure_yo_self"><button class="menu"><i class="fa-solid fa-house-chimney"></i></button></a>
+    <a href="support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+    <a href="downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+    <button class="pagehere"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+    <a href="media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
+    <a href="contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
+  </div>
   </head>
  <body>
+  <div class="main">
     <p>
       <h1>Shop</h1>
-      <h3 style="border: 1px solid #8bc34a; width:50%;">A small selection of 3D printed products! All prices include delivery. </h3>
+      <h3 style="border: 1px solid #00ff00; width:50%;">A small selection of 3D printed products! All prices include delivery. </h3>
     </p>
-    <b>(coming soon) - finalizing designs -- adding checkout buttons</b>
-    <br>
-    <p><h4 style="text-shadow: 2px 2px 4px #000000; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4></p>
-    <br>
+  </br>
+    <p><h4 style="text-shadow: 2px 2px 4px #000000; color: orange; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4>
+    </p>
+  </br>
     <!-- Shop Time -->
     <center>
       <div class="product"><img src="images/3d/squareplanter01.png" height="150px" width="auto" />
@@ -68,7 +70,6 @@
         <p><h5 style="color:orange">Orange</h5><h5 style="text-shadow: 2px 2px 4px #000000;">Clear-ish</h5><h5 style="color:green;">Green</h5><h5 style="color:blue;">Teal</h5><h5 style="color:hotpink;">Pink</h5><h5 style="color:pink;">Pastel Pink</h5></p>
         <!--Put Paypal Button Here! --><p><a href="shop/product2.html"><button class="productbtn"><i class="fa-solid fa-circle-info"></i></button></a><a href="https://www.phantominc.net/downloads"><button class="productbtn"><i class="fas fa-download"></i> Download</button></a></p>
       </div>
-      </br>
       <div class="product"><img src="images/phantom_sticker.png" height="150" width="150"/>
         <h2>Phantom Inc Stickers </br></h2>
         <p class="price">10 for $9</p>
@@ -84,9 +85,9 @@
         <!--Put Paypal Button Here! --><p><a href="https://www.stickermule.com/u/jeremysmai/item/11557838"><button class="productbtn"><i class="fa-solid fa-cart-shopping"></i> Buy @ StickerMule</button></a></p>
       </div>     
   </center>
-  <p><h4 style="text-shadow: 2px 2px 4px #000000; color:red; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4></p>
-    <br>
-  <br>
+</br>
+  <p><h4 style="text-shadow: 2px 2px 4px #000000; color: orange; font-style:bold;"> * Currently Only Accepting payments through <u>PayPal</u> & <u>Square</u> * </h4></p>
+  </div>
  </body>
  <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
 </html>
