--- a/startpage.html
+++ b/startpage.html
@@ -18,15 +18,15 @@
     <!--Quick little hack for speedtest -->
    <style>
    .st {
-     border: 1px solid #8bc34a;
+     border: 1px solid #00e600;
      display: none;
      width: auto;
    }
 
    .ip {
-     border: 1px solid #8bc34a;
+     border: 1px solid #00e600;
      display: none;
-     color: tomato;
+     color: white;
      font-weight: bold;
      font-size: 18px;
      width: 45%;
@@ -41,27 +41,25 @@
      }
    }
    </style>
+     <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom low Rez" /></center>
+     <p>
+       <center>
+     <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/></button></a>
+     <a href="https://www.youtube.com/"><button class="menu"><i class="fab fa-youtube"></i></button></a>
+     <a href="https://www.reddit.com"><button class="menu"><i class="fab fa-reddit"></i></button></a>
+     <a href="https://www.amazon.com"><button class="menu"><i class="fab fa-amazon"></i></button></a>
+     <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
+      </center>
 </head>
 
 <body>
-  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom low Rez" /></center>
-  <p>
-    <center>
-  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"><img src="images/phanicon-bw.svg"/></button></a>
-  <a href="https://www.youtube.com/"><button class="menu"><i class="fab fa-youtube"></i></button></a>
-  <a href="https://www.reddit.com"><button class="menu"><i class="fab fa-reddit"></i></button></a>
-  <a href="https://www.amazon.com"><button class="menu"><i class="fab fa-amazon"></i></button></a>
-  <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i></button></a>
-   </center>
-  </p>
-    <p>
-  <h1>
+  <div class="startpage">
+  <p><h1>
     Welcome! Looks like you're <div class="blink">online!</div>
   </h1>
   </p>
-    <p>
   <center>
-  Here are some things for proof:
+  <h3 style="color: #383838;">Here are some things for proof:</h3>
   <br />
   <!-- IP checking script -->
   <button class="menu" onclick="ipaddress()"><i class="fas fa-exclamation-triangle"></i> Reveal IP Address </button>
@@ -110,6 +108,7 @@
    }
  }
 </script>
+</div>
   </body>
 
   <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-bw.svg"/> version: 1.2 </footer>
