--- a/support.html
+++ b/support.html
@@ -24,17 +24,20 @@
 
     gtag('config', 'UA-122993902-1');
   </script>
+  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
+  <div class="navigation">
+    <!-- Force all links to use HTTPS incase navigation to here was insecure -->
+  <a href="index.html" alt="secure_yo_self"><button class="menu"><i class="fa-solid fa-house-chimney"></i></button></a>
+  <button class="pagehere"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button>
+  <a href="downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+  <a href="shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+  <a href="media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
+  <a href="contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
+</div>
 </head>
 
   <body>
-  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
-      <center>
-  <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
-  <a href="https://www.phantominc.net/downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
-  <a href="https://www.phantominc.net/shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
-  <a href="https://www.phantominc.net/media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
-  <a href="https://www.phantominc.net/contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
-    </center>
+    <div class="main">
   <h1>IT SUPPORT</h1>
 </br>
 <p> I provide many IT services, if you're looking for a quote please <a href="https://www.phantominc.net/contact.html">contact me!</a></p>
@@ -91,6 +94,7 @@
 <p><a href="https://www.phantominc.net/startpage"><img src="images/phanicon-32x32.svg" /></a></p>
 <br>
 <br>
+</div>
   </body>
 
   <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
