--- a/updates.html
+++ b/updates.html
@@ -27,11 +27,18 @@
  <style> h2 {border: 1px solid #8bc34a; width:150px;}</style>
  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
  <div class="navigation">
-    <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
-  </div>
+   <!-- Force all links to use HTTPS incase navigation to here was insecure -->
+ <a href="index.html" alt="secure_yo_self"><button class="menu"><i class="fa-solid fa-house-chimney"></i></button></a>
+ <a href="support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+ <a href="downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+ <a href="shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+ <a href="media.html"><button class="menu"><i class="far fa-lemon"></i> Media</button></a>
+ <a href="contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
+</div>
 </head>
 
 <body>
+  <div class="main">
   <p>
    <h5>All Updates</h5>
   </p>
@@ -98,6 +105,7 @@
   <center> "Hack The Planet!" </br>|'' | </center>
 <br>
 <br>
+</div>
 </body>
 
 
