--- a/wishlist.html
+++ b/wishlist.html
@@ -4,13 +4,14 @@
 <head>
   <title>Jeremy's Wish List </title>
   <link rel="stylesheet" href="css/main.css" />
-  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript>
   <!-- Fontawesome API code goes here :D -->
   <script src="https://kit.fontawesome.com/23b2a6f9a6.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
       <link rel="icon" href="images/phanicon32.png" sizes="32x32" type="image/png">
     <!-- Mobile Site Fix BB -->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+      <meta name="description" content="Phantom Inc Official Website for IT Support, Photorgraphy and More!">
       <style>
       html {
         /* background: url("images/background.jpg"); */
@@ -56,6 +57,7 @@
   </head>
 
   <body>
+    <div class="main">
     <p><h1> Jeremy's Wishlist <i class="fas fa-hat-wizard"></i></h1></p>
     <p><center><h2> - - - </h2></center></p>
     <!-- Start of Post Section -->
@@ -85,6 +87,7 @@
       <center><h1><i class="fab fa-buy-n-large"></i></h1></center>
   <br>
   <br>
+  </div>
 </body>
 
   <footer> &copy; Phantom Inc. 2022  <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.1 </footer>
