--- a/media.html
+++ b/media.html
@@ -30,10 +30,16 @@
     <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
     <div class="navigation">
       <!-- Force all links to use HTTPS incase navigation to here was insecure -->
-      <a href="https://www.phantominc.net" alt="secure_yo_self"><button class="menu"> - <img src="images/phanicon-bw.svg"/> - </button></a>
+    <a href="index.html" alt="secure_yo_self"><button class="menu"><i class="fa-solid fa-house-chimney"></i></button></a>
+    <a href="support.html"><button class="menu"><i class="fas fa-file-medical-alt" alt="Protect Yourself"></i> IT Support</button></a>
+    <a href="downloads.html"><button class="menu"><i class="fas fa-download" alt="Download YoSelf"></i> Downloads </button></a>
+    <a href="shop.html"><button class="menu"><i class="fas fa-shopping-cart"></i> Shop</button></a>
+    <button class="pagehere"><i class="far fa-lemon"></i> Media</button>
+    <a href="contact.html"><button class="menu"><i class="far fa-address-card" alt="Contact Me yoself"></i> Contact</button></a>
   </div>
 </head>
   <body>
+    <div class="main">
     <p>
     <h1>Media</h1>
   </p>
@@ -64,6 +70,7 @@
 <center><img src="images/phanicon-32x32.svg" /></center>
 <br>
 <br>
+</div>
 </body>
 
 <footer> &copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2 </footer>
