fixed spacing and final colors

--- a/updates.html
+++ b/updates.html
@@ -24,7 +24,7 @@
 
     gtag('config', 'UA-122993902-1');
  </script>
- <style> h2 {border: 1px solid #8bc34a; width:150px;}</style>
+ <style> h2 {border: 1px solid #00ff00; width:150px;}</style>
  <center><img src="images/phantom-icon.png" class="logo" height="300" width="300" alt="Phantom Inc Logo" /></center>
  <div class="navigation">
    <!-- Force all links to use HTTPS incase navigation to here was insecure -->
