pushing small change for now, will alter

--- a/downloads.html
+++ b/downloads.html
@@ -52,7 +52,6 @@
 <!-- Games Table Section  -->
   <br>
 <h2>Games <i class="fas fa-gamepad"></i></h2>
-<center>
   <table>
     <tr>
       <th>Title</th>
@@ -70,86 +69,90 @@
       <td><i class="fab fa-raspberry-pi"></i> Raspberry Pi</td>
     </tr>
   </table>
-</center>
 <!-- #D Print Files Section -->
 <br>
 <h2> 3D Print Files <i class="fas fa-cubes"></i> </h2>
-<center>
 <table>
   <tr>
-    <th> Filename </th>
-    <th> Version </th>
+    <th> File </th>
+    <th> Ver. </th>
     <th> Description </th>
     <th> Preview </th>
+    <th> Links </th>
   </tr>
 <!-- PRINT POST -->
   <tr>
-    <td> JD's Square Planter - <a href="https://www.tinkercad.com/things/3jETiXglkNr">Tinker</a> </td>
+    <td> JD's Square Planter </td>
     <td> 0.2 </td>
     <td> First Planter utiilizing all space on the Prusa Mini+<br>
          Infill: 20% </br>
          Filament: PLA/PETG </br>
      </td>
-    <td> <img src="images/3d/squareplanter01.png" width="216" height="135" /> </td>
+    <td> <img src="images/3d/squareplanter01.png" width="auto" height="50" /> </td>
+    <td> <a href="https://www.tinkercad.com/things/3jETiXglkNr" target="_blank">Tinkercad</a> </td>
   </tr>
 <!-- PRINT POST -->
   <tr>
-    <td> JD's Square Planter Plate - <a href="https://www.tinkercad.com/things/4Yfz68wsNAO">Tinker</a> </td>
+    <td> JD's Square Planter Plate </td>
     <td> 0.1 </td>
     <td> The matching planter plate <br>
          Infill: 20% </br>
          Filament: PLA/PETG </br>
      </td>
-    <td> <img src="images/3d/squareplanterplate01.png" width="216" height="135" /> </td>
+    <td> <img src="images/3d/squareplanterplate01.png" width="auto" height="50" /> </td>
+    <td><a href="https://www.tinkercad.com/things/4Yfz68wsNAO" target="_blank">Tinkercad</a></td>
   </tr>
 <!-- PRINT POST -->
   <tr>
-    <td> Poly Planter Plate - <a href="https://www.tinkercad.com/things/fcL6tPLiee6">Tinker</a> </td>
+    <td> Poly Planter Plate </td>
     <td> 0.1 </td>
-    <td> Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599">Large Low Poly Planter</a> <br>
+    <td> Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599" target="_blank">Large Low Poly Planter</a> <br>
          Infill: 15% </br>
          Filament: PLA/PETG </br>
      </td>
-    <td> <img src="images/3d/planterplate01.png" width="216" height="135" /> </td>
+    <td> <img src="images/3d/planterplate01.png" width="auto" height="50" /> </td>
+    <td><a href="https://www.tinkercad.com/things/fcL6tPLiee6" target="_blank">Tinkercad</a> <a href="" target="_blank">Printables</a></td>
   </tr>
 <!-- PRINT POST -->
   <tr>
-    <td> Phantom Tray - <a href="https://www.tinkercad.com/things/hEwt0zrH5e2?sharecode=me5C7OSpl8fiOWJcsioQkAgVCVWJcLUkcCsdwUAZyfg">Tinker</a> </td>
+    <td> Phantom Tray </td>
     <td> 0.5 </td>
     <td> A perfect tray for any of your rolling needs  <br>
          Infill: 20% </br>
          Filament: PLA/PETG </br>
      </td>
-    <td> <img src="images/3d/phantomtray05.png" width="216" height="135" /> </td>
+    <td> <img src="images/3d/phantomtray05.png" width="auto" height="50" /> </td>
+    <td><a href="https://www.tinkercad.com/things/hEwt0zrH5e2?sharecode=me5C7OSpl8fiOWJcsioQkAgVCVWJcLUkcCsdwUAZyfg" target="_blank">Tinkercad</a></td>
   </tr>
 <!-- PRINT POST -->
   <tr>
-    <td> 2 Hole Strap - <a href="https://www.tinkercad.com/things/ctzZ5jHyi3k?sharecode=0AirPsUoy9kqagTPPQmn67KOQU0cTkFNJ1Cd6ZcDGGo">Tinker</a> </td>
+    <td> 2 Hole Strap </td>
     <td> 0.2 </td>
     <td> 2 Hole strap that can be used for anything. <i>Example: mount cat5/6 cable to joists.</i> <br>
          Infill: 20% </br>
          Filament: PETG (for strength) </br>
      </td>
-    <td> <img src="images/3d/2holestrap02.png" width="216" height="135" /> </td>
+    <td> <img src="images/3d/2holestrap02.png" width="auto" height="50" /> </td>
+    <td><a href="https://www.tinkercad.com/things/ctzZ5jHyi3k?sharecode=0AirPsUoy9kqagTPPQmn67KOQU0cTkFNJ1Cd6ZcDGGo" target="_blank">Tinkercad</a></td>
   </tr>
 <!-- PRINT POST -->
   <tr>
-    <td> Multi Hook Door Hanger - <a href="https://www.tinkercad.com/things/gsALLvtj8O6?sharecode=36PXpdynp9L3FFw1DxskvqLTdlGc_YmJhLhbvFw8oWg">Tinker</a> </td>
+    <td> Multi Hook Door Hanger </td>
     <td> 0.2 </td>
     <td> Over the door hook that allows multiple hanger items <br>
          Infill: 20% </br>
          Filament: PETG (for strength) </br>
      </td>
-    <td> <img src="images/3d/multihookdoorhanger02.png" width="216" height="135" /> </td>
+    <td> <img src="images/3d/multihookdoorhanger02.png" width="auto" height="50" /> </td>
+    <td><a href="https://www.tinkercad.com/things/gsALLvtj8O6?sharecode=36PXpdynp9L3FFw1DxskvqLTdlGc_YmJhLhbvFw8oWg" target="_blank">Tinkercad</a></td>
   </tr>
 <!-- PRINT POST -->
  </table>
-</center>
 
 <!-- Utilities Table Section -->
   <br>
   <h2>Utilities <i class="fas fa-box-open"></i></h2>
-  <center><table>
+  <table>
   <tr>
     <th> File </th>
     <th> Version </th>
@@ -175,7 +178,6 @@
     <td><i class="fab fa-linux"></i> (Linux)</td>
   </tr>
 </table>
-</center>
 <br>
   <p>
     <!--<a href="#"><button class="menu"><i class="fas fa-bars"></i> How To's </button></a> -->
@@ -186,10 +188,9 @@
     <a href="https://jeremysmai.github.io/FearandLoathingGTA/"><button class="menu"><i class="fas fa-gamepad" alt="GTA RP Server"></i> GTA RP</button></a>
     <a href="https://github.com/jeremysmai"><button class="menu"><i class="fab fa-github"></i> Github</button></a></p>
   <br>
-    <center><h4>If you ever feel my software is that good, feel free to donate using the button below</h4></center>
-    <center><a href="https://paypal.me/jeremysmai"><button class="menu"><i class="fas fa-hand-holding-heart" alt="Donate?"></i> Donate</button></a>
+    <h4>If you ever feel my software is that good, feel free to donate using the button below</h4>
+    <a href="https://paypal.me/jeremysmai"><button class="menu"><i class="fas fa-hand-holding-heart" alt="Donate?"></i> Donate</button></a>
     </div>
-    </center>
     <br>
     <br>
   </div>
