added wallpapers, fixed 3d downloads

--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,9 @@
     <h1>Contact</h1>
     <h4><i>Use the links below to contact me!</i></h4>
     <p>
-      <a href="sms:1-414-465-8826"><button class="menu"><i class="fas fa-comments" alt="SMS"></i> Text Me </button></a>
-      <a href="tel:1-414-465-8826"><button class="menu"><i class="fas fa-phone" alt="Call"></i> Call Me </button></a>
-      <a href="mailto:contact@phantominc.net?subject=PhantomInc Support"><button class="menu"><i class="fas fa-envelope" alt="Email"></i> Email Me </button></a>
+      <a href="sms:1-414-465-8826"><button class="menu"><i class="fas fa-comments" alt="SMS"></i> Text </button></a>
+      <a href="tel:1-414-465-8826"><button class="menu"><i class="fas fa-phone" alt="Call"></i> Call </button></a>
+      <a href="mailto:contact@phantominc.net?subject=PhantomInc Support"><button class="menu"><i class="fas fa-envelope" alt="Email"></i> Email </button></a>
       <br>
       <a href="https://twitter.com/jeremysmai"><button class="menu"><i class="fab fa-twitter"></i> Twitter </button></a>
       </p>
