--- a/downloads.html
+++ b/downloads.html
@@ -45,8 +45,8 @@
    <h4> Recent Updates </h4>
      <ul>
       <li> more 3D Prints added </li>
-      <li> Scripts updated to always show current year, less updates </li>
-    &gt; &gt; updated December 2022 &lt; &lt;
+      <li> fixed 3D print section for more prints </li>
+    &gt; &gt; updated July 2023 &lt; &lt;
     </ul>
  </p>
 <!-- Games Table Section  -->
@@ -72,82 +72,68 @@
 <!-- #D Print Files Section -->
 <br>
 <h2> 3D Print Files <i class="fas fa-cubes"></i> </h2>
-<table>
-  <tr>
-    <th> File </th>
-    <th> Ver. </th>
-    <th> Description </th>
-    <th> Preview </th>
-    <th> Links </th>
-  </tr>
+
 <!-- PRINT POST -->
-  <tr>
-    <td> JD's Square Planter </td>
-    <td> 0.2 </td>
-    <td> First Planter utiilizing all space on the Prusa Mini+<br>
-         Infill: 20% </br>
-         Filament: PLA/PETG </br>
-     </td>
-    <td> <img src="images/3d/squareplanter01.png" width="auto" height="50" /> </td>
-    <td> <a href="https://www.tinkercad.com/things/3jETiXglkNr" target="_blank">Tinkercad</a> </td>
-  </tr>
+    <button class="printacc"> Square Planter </button>
+    <div class="printpanel"><p>
+      First Planter utiilizing all space on the Prusa Mini+ <br>
+      Infill: 20% <br>
+      Filament: PLA or PETG<br>
+      <img src="images/3d/squareplanter01.png" width="auto" height="100" /><br>
+      <a href="https://www.tinkercad.com/things/3jETiXglkNr" target="_blank"><button class="menu2">Tinkercad </button></a>
+    </p>
+    </div>
 <!-- PRINT POST -->
-  <tr>
-    <td> JD's Square Planter Plate </td>
-    <td> 0.1 </td>
-    <td> The matching planter plate <br>
-         Infill: 20% </br>
-         Filament: PLA/PETG </br>
-     </td>
-    <td> <img src="images/3d/squareplanterplate01.png" width="auto" height="50" /> </td>
-    <td><a href="https://www.tinkercad.com/things/4Yfz68wsNAO" target="_blank">Tinkercad</a></td>
-  </tr>
+    <button class="printacc"> Square Planter Plate </button>
+    <div class="printpanel"><p> 
+      The matching planter plate <br>
+      Infill: 20% <br>
+      Filament: PLA or PETG <br>
+      <img src="images/3d/squareplanterplate01.png" width="auto" height="100" /><br>
+      <a href="https://www.tinkercad.com/things/4Yfz68wsNAO" target="_blank"><button class="menu2"> Tinkercad </button></a>
+    </p>
+    </div>
 <!-- PRINT POST -->
-  <tr>
-    <td> Poly Planter Plate </td>
-    <td> 0.1 </td>
-    <td> Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599" target="_blank">Large Low Poly Planter</a> <br>
-         Infill: 15% </br>
-         Filament: PLA/PETG </br>
-     </td>
-    <td> <img src="images/3d/planterplate01.png" width="auto" height="50" /> </td>
-    <td><a href="https://www.tinkercad.com/things/fcL6tPLiee6" target="_blank">Tinkercad</a> <a href="" target="_blank">Printables</a></td>
-  </tr>
+    <button class="printacc"> Poly Planter Plate </button>
+        <div class="printpanel"><p> Planter Plate I created for use with <a href="https://www.prusaprinters.org/prints/35599" target="_blank">Large Low Poly Planter</a><br>
+         Infill: 15% <br>
+         Filament: PLA or PETG <br>
+          <img src="images/3d/planterplate01.png" width="auto" height="100" /><br>
+          <a href="https://www.tinkercad.com/things/fcL6tPLiee6" target="_blank"><button class="menu2"> Tinkercad </button></a> 
+          <a href="" target="_blank"><button class="menu2"> Printables </button></a>
+          </p>
+        </div>
 <!-- PRINT POST -->
-  <tr>
-    <td> Phantom Tray </td>
-    <td> 0.5 </td>
-    <td> A perfect tray for any of your rolling needs  <br>
-         Infill: 20% </br>
-         Filament: PLA/PETG </br>
-     </td>
-    <td> <img src="images/3d/phantomtray05.png" width="auto" height="50" /> </td>
-    <td><a href="https://www.tinkercad.com/things/hEwt0zrH5e2?sharecode=me5C7OSpl8fiOWJcsioQkAgVCVWJcLUkcCsdwUAZyfg" target="_blank">Tinkercad</a></td>
-  </tr>
+    <button class="printacc"> Phantom Tray </button>
+      <div class="printpanel"><p>
+         A perfect tray for any of your rolling needs  <br>
+         Infill: 20% <br>
+         Filament: PLA or PETG <br>
+          <img src="images/3d/phantomtray05.png" width="auto" height="100" /><br>
+          <a href="https://www.tinkercad.com/things/hEwt0zrH5e2?sharecode=me5C7OSpl8fiOWJcsioQkAgVCVWJcLUkcCsdwUAZyfg" target="_blank"><button class="menu2"> Tinkercad </button></a>
+          </p>
+        </div>
 <!-- PRINT POST -->
-  <tr>
-    <td> 2 Hole Strap </td>
-    <td> 0.2 </td>
-    <td> 2 Hole strap that can be used for anything. <i>Example: mount cat5/6 cable to joists.</i> <br>
-         Infill: 20% </br>
-         Filament: PETG (for strength) </br>
-     </td>
-    <td> <img src="images/3d/2holestrap02.png" width="auto" height="50" /> </td>
-    <td><a href="https://www.tinkercad.com/things/ctzZ5jHyi3k?sharecode=0AirPsUoy9kqagTPPQmn67KOQU0cTkFNJ1Cd6ZcDGGo" target="_blank">Tinkercad</a></td>
-  </tr>
+    <button class="printacc"> 2 Hole Strap </button>
+        <div class="printpanel"><p>
+         2 Hole strap that can be used for anything. <br>
+         <i>Example: mount cat5/6 cable to joists.</i> <br>
+         Infill: 20% <br>
+         Filament: PETG (for strength) <br>
+          <img src="images/3d/2holestrap02.png" width="auto" height="100" /><br>
+          <a href="https://www.tinkercad.com/things/ctzZ5jHyi3k?sharecode=0AirPsUoy9kqagTPPQmn67KOQU0cTkFNJ1Cd6ZcDGGo" target="_blank"><button class="menu2"> Tinkercad </button></a>
+          </p>
+        </div>
 <!-- PRINT POST -->
-  <tr>
-    <td> Multi Hook Door Hanger </td>
-    <td> 0.2 </td>
-    <td> Over the door hook that allows multiple hanger items <br>
-         Infill: 20% </br>
-         Filament: PETG (for strength) </br>
-     </td>
-    <td> <img src="images/3d/multihookdoorhanger02.png" width="auto" height="50" /> </td>
-    <td><a href="https://www.tinkercad.com/things/gsALLvtj8O6?sharecode=36PXpdynp9L3FFw1DxskvqLTdlGc_YmJhLhbvFw8oWg" target="_blank">Tinkercad</a></td>
-  </tr>
-<!-- PRINT POST -->
- </table>
+    <button class="printacc"> Multi Hook Door Hanger </button>
+    <div class="printpanel"><p>
+         Over the door hook that allows multiple hanger items <br>
+         Infill: 20% <br>
+         Filament: PETG (for strength) <br>
+    <img src="images/3d/multihookdoorhanger02.png" width="auto" height="100" /><br>
+    <a href="https://www.tinkercad.com/things/gsALLvtj8O6?sharecode=36PXpdynp9L3FFw1DxskvqLTdlGc_YmJhLhbvFw8oWg" target="_blank"><button class="menu2"> Tinkercad </button></a>
+    </p>
+    </div>
 
 <!-- Utilities Table Section -->
   <br>
@@ -194,6 +180,21 @@
     <br>
     <br>
   </div>
+  <script>
+    var acc = document.getElementsByClassName("printacc");
+    var i;
+    
+    for (i = 0; i < acc.length; i++) {
+      acc[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var panel = this.nextElementSibling;
+        if (panel.style.maxHeight) {
+          panel.style.maxHeight = null;
+        } else {
+          panel.style.maxHeight = panel.scrollHeight + "px";
+        } 
+      });
+    }</script>
   </body>
   <footer>&copy; Phantom Inc. <script>document.write(/\d{4}/.exec(Date())[0])</script> <img src="images/phanicon-32x32.svg" height="20px" width="20px" />   version: 1.2</footer>
 </html>
