--- a/media.html
+++ b/media.html
@@ -59,12 +59,27 @@
 <br>
 <br>
 <h2>- - Wallpapers - -</h2>
-<a href="https://thumbnails-photos.amazon.com/v1/thumbnail/7n1yb5ybRDipWEQyUE-BjQ?viewBox=5700%2C3004&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
-  <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/7n1yb5ybRDipWEQyUE-BjQ?viewBox=5700%2C3004&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250" alt="4K-Skyline"></a> <a href="images/background.jpg"><img src="images/background.jpg" height="150" width="250"></a>
+  <a href="https://thumbnails-photos.amazon.com/v1/thumbnail/7n1yb5ybRDipWEQyUE-BjQ?viewBox=5700%2C3004&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
+   <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/7n1yb5ybRDipWEQyUE-BjQ?viewBox=5700%2C3004&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250" alt="4K-Skyline"></a> 
+  <a href="https://thumbnails-photos.amazon.com/v1/thumbnail/EJh8J9otSYy9w9PtkmtgOw?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
+    <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/EJh8J9otSYy9w9PtkmtgOw?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250"></a>
+  <a href="https://thumbnails-photos.amazon.com/v1/thumbnail/ztmtLuypTjiJ6FUR78S8XA?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
+    <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/ztmtLuypTjiJ6FUR78S8XA?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250"></a>
+  <a href="https://thumbnails-photos.amazon.com/v1/thumbnail/ObAjp3kWRdKeK5-CTrYOXg?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
+    <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/ObAjp3kWRdKeK5-CTrYOXg?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250"></a>
+  <a href="https://thumbnails-photos.amazon.com/v1/thumbnail/BLHB0FnKT2WAcyJ2D8LXJg?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
+    <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/BLHB0FnKT2WAcyJ2D8LXJg?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250"></a>
+  <a href="https://thumbnails-photos.amazon.com/v1/thumbnail/0KYbSkmET0SG1BZlRAG5mg?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
+    <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/0KYbSkmET0SG1BZlRAG5mg?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250"></a>
+  <a href="https://thumbnails-photos.amazon.com/v1/thumbnail/NWvMPaBcTj2NETx8JeZQbg?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83">
+    <img src="https://thumbnails-photos.amazon.com/v1/thumbnail/NWvMPaBcTj2NETx8JeZQbg?viewBox=1771%2C934&ownerId=A8QMQJJLQWF22&groupShareToken=a8U6oY84TLuXgye5RstBIQ.MKyTy3e8aBk9meCIEL3A83" height="150" width="250"></a>
 <br>
 <br>
 <h2>- - Logos - -</h2>
-<a href="images/logo.jpg"><img src="images/logo.jpg" height="150" width="150"></a> <a href="images/fresh_logo.JPG"><img src="images/fresh_logo.JPG" height="150" width="150"></a> <a href="images/phantom_inc.JPG"><img src="images/phantom_inc.JPG" height="150" width="150"></a> <a href="images/phantominc.jpeg"><img src="images/phantominc.jpeg" height="150" width="150"></a>
+<a href="images/logo.jpg"><img src="images/logo.jpg" height="150" width="150"></a> 
+<a href="images/fresh_logo.JPG"><img src="images/fresh_logo.JPG" height="150" width="150"></a> 
+<a href="images/phantom_inc.JPG"><img src="images/phantom_inc.JPG" height="150" width="150"></a> 
+<a href="images/phantominc.jpeg"><img src="images/phantominc.jpeg" height="150" width="150"></a>
 <br>
 <br>
 <center><img src="images/phanicon-32x32.svg" /></center>
